Put relative links instead of hardlinks to https://faustdoc.grame.fr in .md files

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -7,7 +7,7 @@ The covid-19 containment gives us at least one excellent opportunity to train! I
 The objective of this workshop is to help you get familiar with the Faust language through very simple examples of signal processing and sound synthesis.
 The documentation and the examples we will use can be found here:
 
-- **[https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/](https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/)**
+- **[../workshops/2020-04-10-faust-101/](../workshops/2020-04-10-faust-101.md)**
 
 All examples will be run in the online Faust IDE:
 
@@ -51,7 +51,7 @@ Several lessons can be learned from this very simple example:
 
 ### Example 2: Adding two signals
 
-We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all [mathematical operations](https://faustdoc.grame.fr/manual/syntax/#faust-syntax).
+We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all [mathematical operations](../manual/syntax.md#faust-syntax).
 
 The `+` primitive for instance is used to add two signals. It can therefore be used to transform a stereophonic signal (on two channels) into a monophonic signal as in the following example:
 
