Correct english with GPT-5 codex.

--- a/quick-reference/faust-quick-reference.tex
+++ b/quick-reference/faust-quick-reference.tex
@@ -2,6 +2,7 @@
 %\usepackage{latexsym, amssymb}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{amsmath}
 \usepackage{latexsym}
 \usepackage{graphicx}
 %\usepackage{longtable}
