--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -10,7 +10,7 @@ The first step is to build a _phase generator_ that produces a periodic sawtooth
 
 ### Ramp
 
-In order to produce the above signal we need first to produce a ramp signal
+To produce the above signal, we must first generate a ramp signal
 <img src="img/ramp-sig.png" width="70%" class="mx-auto d-block">
 
 using the following Faust program:
@@ -22,7 +22,7 @@ process = 0.125 : + ~ _;
 <!-- /faust-run -->
 
 You can think of a Faust program as a description of an audio circuit
-where `0.125`, `+` and `_` are *primitives* of the language (predefined elementary audio components), and the other two signs: `:` and `~` are used to connect together these audio components.
+where `0.125`, `+` and `_` are *primitives* of the language (predefined elementary audio components), and the other two signs: `:` and `~` are used to connect these audio components together.
 
 ### Semantics
 
@@ -46,7 +46,7 @@ We can compute the first values of \(y(t)\):
 
 ### Phase Signal
 
-How can we transform the above ramp into sawtooth signal ? By removing the integer part of the samples in order to keep only the decimal (fractional) part (`3.14159` -> `0.14159`).
+How can we transform the above ramp into a sawtooth signal? By removing the integer part of the samples in order to keep only the decimal (fractional) part (`3.14159` -> `0.14159`).
 
 Let's define a function to do that:
 
@@ -66,7 +66,7 @@ From a mathematical point of view that would be perfectly correct, but we will a
 process = 0.125 : (+ : decimalpart) ~ _;
 ```
 
-We can now listen the produced signal. Just copy and past `decimalpart` and `process` definitions into the [Faust Web IDE](https://faustide.grame.fr).
+We can now listen to the produced signal. Just copy and paste the `decimalpart` and `process` definitions into the [Faust Web IDE](https://faustide.grame.fr).
 
 ## Controlling the Frequency of the Phase Signal
 
@@ -80,11 +80,11 @@ process = phase;
 ```
 <!-- /faust-run -->
 
-In our `phase` definition the step value, here `0.125` controls the frequency of the generated signal. We would like to compute this step value according to the desired frequency. In order to do the conversion we need to know the sampling rate. It is available from the standard library as `ma.SR`. 
+In our `phase` definition the step value, here `0.125`, controls the frequency of the generated signal. We would like to compute this step value according to the desired frequency. In order to do the conversion we need to know the sampling rate. It is available from the standard library as `ma.SR`. 
 
-Let say we would like our phase signal to have a frequency of 1 Hz, then the step should be very small `1/ma.SR` so that is will take `ma.SR` samples (i.e. 1 second) for the phase signal to reach 1.
+Let's say we would like our phase signal to have a frequency of 1 Hz; then the step should be very small, `1/ma.SR`, so that it will take `ma.SR` samples (i.e. 1 second) for the phase signal to reach 1.
 
-If we want a frequency of 440 Hz, we need a step 440 times bigger for the phase signal to reach 1 440 times faster. 
+If we want a frequency of 440 Hz, we need a step 440 times bigger so that the phase signal reaches 1 four hundred and forty times faster. 
 
 ```
 phase = 440/ma.SR : (+ : decimalpart) ~ _;
@@ -104,7 +104,7 @@ process = phase(440);
 
 ## Creating a Sine Wave Oscillator
 
-The next step is to transform above phase generator into a sine wave generator. We will use the `sin` primitive that computes the sine of x (measured in radians). Therefore we start for the phase signal, we multiply it by 2PI to obtain radiants, and compute the sine. The full program is the following:
+The next step is to transform the phase generator above into a sine wave generator. We will use the `sin` primitive that computes the sine of x (measured in radians). Therefore we start from the phase signal, multiply it by `2*ma.PI` to obtain radians, and compute the sine. The full program is the following:
 
 <!-- faust-run -->
 ```
@@ -118,7 +118,7 @@ process = osc(440);
 
 ## Controlling the Frequency and Gain of the Oscillator
 
-The next step is to add some controls on the frequency and gain of the oscillator. We can replace the fixed frequency `440` by a user interface slider:
+The next step is to add some controls for the frequency and gain of the oscillator. We can replace the fixed frequency `440` by a user interface slider:
 
 ```
 process = osc(hslider("freq", 440, 20, 10000, 1));
@@ -132,7 +132,7 @@ process = osc(hslider("freq", 440, 20, 10000, 1)) * hslider("gain", 0.5, 0, 1, 0
 
 ## Adding a Gate Button
 
-In order to prepare our MIDI synthesizer we need to add a gate button so that the sound is only when we press it:
+In order to prepare our MIDI synthesizer we need to add a gate button so that the sound is produced only when we press it:
 
 ```
 process = osc(hslider("freq", 440, 20, 10000, 1)) * hslider("gain", 0.5, 0, 1, 0.01) * button("gate");
@@ -140,7 +140,7 @@ process = osc(hslider("freq", 440, 20, 10000, 1)) * hslider("gain", 0.5, 0, 1, 0
 
 ## Adding an Envelope Generator
 
-It is a good idea to also add an envelop generator. Here we will use a predefined ADSR in the Standard Faust library.
+It is a good idea to also add an envelope generator. Here we will use a predefined ADSR in the standard Faust library.
 
 <!-- faust-run -->
 ```
@@ -157,7 +157,7 @@ process = osc(hslider("freq", 440, 20, 10000, 1))
 
 ## Improving the Timbre
 
-Instead of playing pure sine waves tones, let's improve the timbre with simple additive synthesis:
+Instead of playing pure sine wave tones, let's improve the timbre with simple additive synthesis:
 
 <!-- faust-run -->
 ```
