--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -2,7 +2,7 @@
 <img src="img/logo-faust.png" width="100%" class="mx-auto d-block">
 
 # Faust 101 for the confined
-The covid-19 containment gives us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
+The COVID-19 containment gives us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
 
 The objective of this workshop is to help you get familiar with the Faust language through very simple examples of signal processing and sound synthesis.
 The documentation and the examples we will use can be found here:
@@ -13,17 +13,17 @@ All examples will be run in the online Faust IDE:
 
 - **[https://faustide.grame.fr](https://faustide.grame.fr)**
 
-If ever the sounds produced with the IDE are of poor quality, with some clicks, one can use the online editor, which is more rustic, but also lighter: 
+If the sounds produced with the IDE are of poor quality or include clicks, you can use the online editor, which is more basic but also lighter:
 
 - **[https://fausteditor.grame.fr](https://fausteditor.grame.fr)**
 
 ## Faust in a few words
 
-- Faust is a Domain-Specific Language for real-time signal processing and synthesis (like Csound, Max/MSP, SuperCollider, PureData,. . . ).
-- Faust is based on purely functional approach.
-- a Faust program denotes a signal processor: a function that maps input signals to output signals.
-- Programming in Faust is essentially combining signal processors using an algebra of 5 composition operations: `<: :> : , ~`.
-- Faust is a compiled language, the role of the Faust compiler is to synthesize the most efficient implementations.
+- Faust is a domain-specific language for real-time signal processing and synthesis (like Csound, Max/MSP, SuperCollider, PureData, ...).
+- Faust is based on a purely functional approach.
+- A Faust program denotes a signal processor: a function that maps input signals to output signals.
+- Programming in Faust is essentially about combining signal processors using an algebra of five composition operations: `<: :> : , ~`.
+- Faust is a compiled language, and the role of the Faust compiler is to synthesize the most efficient implementations.
 - Faust offers end-users a high-level alternative to C/C++ to develop audio applications for a large variety of platforms.
 
 ## Part 1: Very simple examples
@@ -132,11 +132,11 @@ process = (_, 0.1) : *; // try to replace 0.1 by other values between 0 and 1
 
 Note that we have used parentheses in this example to clearly mark the order in which things should be done. We start by putting `_` and `0.1` in parallel, and then compose them in sequence with `*`.
 
-But, just as in `(2*3)+7` were the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the parentheses, because parallel composing takes precedence over sequential composing. The priority of the composition operators is shown in the previous table.
+But, just as in `(2*3)+7` where the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the parentheses, because parallel composing takes precedence over sequential composing. The priority of the composition operators is shown in the previous table.
 
 ### Example 6: Controlling the volume with a slider
 
-Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the minimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1`:
+Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use an `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the default value `0.1`, the minimum value `0`, the maximum value `1`, and a step value `0.1`. So here the default value is `0.1`:
 
 <!-- faust-run -->
 ```
@@ -234,7 +234,7 @@ These notations can be freely combined. For example, the following expressions a
 
 We would like to be able to mute the sound completely at the touch of a button, without having to change the volume. 
 
-Let's add a mute stage to our mono amplifier. In order to mute the signal we just have to mutiply it by 0. We will use for that purpose a `checkbox(...)`, a user interface element that produces a signal which is 0 by default and 1 when it is checked. As we want to multiply the signal by 0 when the checkbox is checked we will use `1-checkbox("mute")`:
+Let's add a mute stage to our mono amplifier. To mute the signal we just have to multiply it by 0. We will use a `checkbox(...)`, a user interface element that produces a signal that is 0 by default and 1 when it is checked. Because we want to multiply the signal by 0 when the checkbox is checked, we will use `1-checkbox("mute")`:
 
 <!-- faust-run -->
 ```
@@ -261,10 +261,9 @@ process = stereoamp;
 ```
 <!-- /faust-run -->
 
-s
 ### Example 14: Differentiate the volume of the two channels
 
-To differentiate the volume control of our two channels, we will parametrize `monoamp` with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`:
+To differentiate the volume control of our two channels, we will parameterize `monoamp` with a channel number `c`, which we will use to customize the name of each volume control. Note that the parameter name `c` must be a single letter so it is interpreted correctly in the slider name `"volume %c[style:knob]"`:
 
 <!-- faust-run -->
 ```
@@ -279,7 +278,7 @@ process = stereoamp;
 
 ### Example 15: Having many channels
 
-We have built a stereo amp, but suppose we wanted to generalize this construction to an arbitrary number of channels. To do so, we will introduce the `par(i, N, ...)` construction which allows us to put several times an expression in parallel. It is in a way the equivalent of the for() loop of a classical programming language. 
+We have built a stereo amp, but suppose we wanted to generalize this construction to an arbitrary number of channels. To do so, we will introduce the `par(i, N, ...)` construction, which allows us to place an expression in parallel several times. It is roughly equivalent to the `for()` loop of a classical programming language. 
 
 In our case we want to indicate the number of channels of our amplifier:
 
@@ -299,11 +298,11 @@ process = multiamp(2); // try multiamp(4)
 
 <img src="img/bande-feedback.png" width="90%" class="mx-auto d-block">
 
-In this new section we will see two important notions, that of delay with the `@` primitive, and that of feedback (from a looped circuit) which will require the use of the recursive composition `A~B` which allows to loop the outputs of A into the inputs of B, and the outputs of B into the inputs of A.
+In this section we will introduce two important concepts: delays using the `@` primitive and feedback (looped circuits), which requires the recursive composition `A~B`. This operator feeds the outputs of `A` into the inputs of `B`, and the outputs of `B` back into the inputs of `A`.
 
 ### Example 1: Monophonic delay of 1 second
 
-Let's start with a very simple example, a monophonic delay of 1 seconds or 44100 samples. We will use the prefix notation:
+Let's start with a very simple example, a monophonic delay of 1 second, or 44,100 samples. We will use the prefix notation:
 
 
 <!-- faust-run -->
@@ -354,7 +353,7 @@ process = _, monoecho;
 
 ### Example 5: A stereophonic echo
 
-Let's make a stereophonic echo with two monophonic echos in parallel:
+Let's make a stereophonic echo with two monophonic echoes in parallel:
 
 <!-- faust-run -->
 ```
@@ -426,7 +425,7 @@ The first step is to build a _phase generator_ that produces a periodic sawtooth
 
 ### Example 1: Ramp
 
-To do this we will produce an "infinite" ramp, which we will then transform into a periodic signal thanks to a _part-decimal_ operation:
+To do this we will produce an "infinite" ramp, which we will then transform into a periodic signal thanks to a _decimal part_ operation:
 
 <img src="img/ramp-sig.png" width="80%" class="mx-auto d-block">
 
@@ -461,7 +460,7 @@ We can calculate the first values of \(y(t)\):
 
 ### Example 2: a phase signal
 
-How do I turn the above ramp into a sawtooth signal? By deleting the whole part of the samples in order to keep only the decimal part: \(3.14159\rightarrow 0.14159\).
+How do we turn the above ramp into a sawtooth signal? By removing the integer part of the samples in order to keep only the decimal part: \(3.14159\rightarrow 0.14159\).
 
 Let's define a function to do this:
 
@@ -475,7 +474,7 @@ We can now use this function to turn our ramp into a sawtooth. It is then tempti
 process = 0.125 : + ~ _ : decimalpart;
 ```
 
-From a mathematical point of view, that would be perfectly correct, but we will accumulate rounding errors. To keep total accuracy, it is better to place the operation of the decimal part inside the loop, like this:
+From a mathematical point of view, that would be perfectly correct, but we will accumulate rounding errors. To maintain full accuracy, it is better to place the decimal-part operation inside the loop, like this:
 
 ```
 process = 0.125 : (+ : decimalpart) ~ _;
@@ -491,7 +490,7 @@ process = phase;
 ```
 <!-- /faust-run -->
 
-In our definition of `phase `, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR` and will be setup at start time by the underlying audio layer. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
+In our definition of `phase`, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR` and will be set up at start time by the underlying audio layer. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
 
 Suppose we want our phase signal to have a frequency of 1 Hz, then the step should be very small `1/ma.SR`, so that it takes `ma.SR` samples (i.e. 1 second) for the phase signal to go from 0 to 1.
 
@@ -568,7 +567,7 @@ process = osc(440);
 ```
 <!-- /faust-run -->
 
-But now that we have seen how to create a sinusoidal oscillator from scratch, we will use the one defined in the standard Faust libraries:
+But now that we have seen how to create a sinusoidal oscillator from scratch, we will use the one defined in the standard Faust library:
 
 <!-- faust-run -->
 ```
@@ -580,7 +579,7 @@ process = os.osc(440);
 
 ### Example 2: a sine wave with volume control
 
-In this second example we used a horizontal slider `hslider(...)` to control the sound level:
+In this second example we use a horizontal slider `hslider(...)` to control the sound level:
 
 <!-- faust-run -->
 ```
@@ -606,7 +605,7 @@ process = os.osc(440 /*to replace*/) * hslider("gain", 0.1, 0, 1, 0.01);
 
 ### Example 4: Frequency aliasing phenomenon beyond SR/2
 
-A well known problem in the field of digital sound synthesis is frequency [aliasing](https://en.wikipedia.org/wiki/Aliasing): any frequency beyond half the sampling frequency is _folded_ in the audible spectrum:
+A well-known problem in the field of digital sound synthesis is frequency [aliasing](https://en.wikipedia.org/wiki/Aliasing): any frequency beyond half the sampling frequency is _folded_ into the audible spectrum:
 
 <!-- faust-run -->
 ```
@@ -620,7 +619,7 @@ process = os.osc(hslider("freq", 440, 20, 20000, 1)) * hslider("gain", 0.1, 0, 1
 
 ### Example 5: Additive synthesis
 
-An example of an additive synthesis, where the level of each partial can be set individually:
+An example of additive synthesis, where the level of each partial can be set individually:
 
 <!-- faust-run -->
 ```
@@ -638,9 +637,9 @@ process = sum(i, 4, partial(i+1, hslider("freq", 440, 20, 8000, 0.001)));
 Note the use of the `sum(i, n, foo(i))` construction which is equivalent to `foo(0)+foo(1)+...+foo(n-1)`.
 
 
-### Example 6: Approximation of a square signal by additive synthesis
+### Example 6: Approximation of a square wave by additive synthesis
 
-We saw earlier how to produce a perfect square wave signal. This perfect square signal contains an infinite number of harmonics which, due to sampling, will fold over the audible spectrum, resulting in a less accurate, noisy sound! A square signal can be approximated by additive synthesis, by adding an infinite series of odd harmonics (see [https://en.wikipedia.org/wiki/Square_wave](https://en.wikipedia.org/wiki/Square_wave)):
+We saw earlier how to produce a perfect square wave signal. This perfect square signal contains an infinite number of harmonics which, due to sampling, will fold over the audible spectrum, resulting in a less accurate, noisy sound! A square wave can be approximated by additive synthesis, by adding an infinite series of odd harmonics (see [https://en.wikipedia.org/wiki/Square_wave](https://en.wikipedia.org/wiki/Square_wave)):
 
 <!-- faust-run -->
 ```
@@ -655,9 +654,9 @@ process = squarewave(55);
 <!-- /faust-run -->
 As an exercise, change the number of harmonics to see the approximation improve (but do not exceed SR/2).
 
-### Example 7: Approximation of a sawtooth signal by additive synthesis
+### Example 7: Approximation of a sawtooth wave by additive synthesis
 
-Similarly, a sawtooth signal can be approximated by additive synthesis, by adding an infinite series of harmonics (see [https://en.wikipedia.org/wiki/Sawtooth_wave](https://en.wikipedia.org/wiki/Sawtooth_wave)):
+Similarly, a sawtooth wave can be approximated by additive synthesis, by adding an infinite series of harmonics (see [https://en.wikipedia.org/wiki/Sawtooth_wave](https://en.wikipedia.org/wiki/Sawtooth_wave)):
 
 <!-- faust-run -->
 ```
@@ -671,9 +670,9 @@ process = sawtooth(55);
 ```
 <!-- /faust-run -->
 
-### Example 8: Band limited oscillators
+### Example 8: Band-limited oscillators
 
-The problem of aliasing can be solved using band-limited oscillators available in Faust libraries:
+The problem of aliasing can be solved using band-limited oscillators available in the Faust libraries:
 
 <!-- faust-run -->
 ```
@@ -693,9 +692,9 @@ process = os.sawN(3,400);
 
 <img src="img/bande-substractive.png" width="90%" class="mx-auto d-block">
 
-Subtractive synthesis is the opposite of additive synthesis. It consists in starting from a rich sound, for example white noise, and sculpting its spectrum.
+Subtractive synthesis is the opposite of additive synthesis. It consists of starting from a rich sound, for example white noise, and sculpting its spectrum.
 
-### Example 1: a white noise
+### Example 1: White noise
 
 A white noise generator:
 
@@ -719,7 +718,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("
 ```
 <!-- /faust-run -->
 
-The used [fi.low](https://faustlibraries.grame.fr/libs/filters/#filowpass) filter can be defined with an argument that modifies the frequency attenuation slope.
+The [fi.lowpass](https://faustlibraries.grame.fr/libs/filters/#filowpass) filter used here can be configured with an argument that adjusts the attenuation slope.
 
 ### Example 3: high pass
 
@@ -733,7 +732,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.highpass(3, hslider(
 ```
 <!-- /faust-run -->
 
-The used [fi.highpass](https://faustlibraries.grame.fr/libs/filters/#highpass) filter can be defined with an argument that modifies the frequency attenuation slope.
+The [fi.highpass](https://faustlibraries.grame.fr/libs/filters/#highpass) filter used here can be configured with an argument that adjusts the attenuation slope.
 
 ### Example 4: bandpass
 
@@ -764,12 +763,12 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 ```
 <!-- /faust-run -->
 
-The used [fi.resonlp](https://faustlibraries.grame.fr/libs/filters/#resonlp) filter has an argument to select the desired frequency, a Q factor to shape the frequency range, and a gain factor.
+The [fi.resonlp](https://faustlibraries.grame.fr/libs/filters/#resonlp) filter used here has an argument to select the desired frequency, a Q factor to shape the frequency range, and a gain factor.
 
 
 ### Example 6: fir
 
-Here a [FIR](https://en.wikipedia.org/wiki/Finite_impulse_response) filter is used: 
+Here an [FIR](https://en.wikipedia.org/wiki/Finite_impulse_response) filter is used:
 
 <!-- faust-run -->
 ```
@@ -786,7 +785,7 @@ transformation = @(1) : *(hslider("gain", 0, -1, 1, 0.1));
 
 ### Example 7: iir
 
-Here a [IIR](https://en.wikipedia.org/wiki/Infinite_impulse_response) filter is used: 
+Here an [IIR](https://en.wikipedia.org/wiki/Infinite_impulse_response) filter is used:
 
 <!-- faust-run -->
 ```
@@ -802,7 +801,7 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 
 ### Example 8: comb filter
 
-A [comb filter](https://en.wikipedia.org/wiki/Comb_filter) attenuates a set of consecutives frequency bands: 
+A [comb filter](https://en.wikipedia.org/wiki/Comb_filter) attenuates a set of consecutive frequency bands:
 
 <!-- faust-run -->
 ```
@@ -816,13 +815,13 @@ transformation = @(hslider("delay", 0, 0, 20, 1)) : *(hslider("gain", 0, -0.98, 
 ```
 <!-- /faust-run -->
 
-### Example 9: Karplus Strong (1/2)
+### Example 9: Karplus-Strong (1/2)
 
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
 
-// Karplus Strong (1/2)
+// Karplus-Strong (1/2)
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) :
         + ~ transformation;
         
@@ -832,13 +831,13 @@ mean(x) = (x+x')/2;
 ```
 <!-- /faust-run -->
 
-### Example 10: Karplus Strong (2/2)
+### Example 10: Karplus-Strong (2/2)
 
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
 
-// Karplus Strong (2/2)
+// Karplus-Strong (2/2)
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) 
         : *(envelop)
         : + ~ transformation;
@@ -870,7 +869,7 @@ declare author  "Yann Orlarey";
 - Front = High + Medium frequencies
 - Bottom = High + Medium + Low frequencies
 - Left = Minimum brightness
-- Right = Maximum birghtness
+- Right = Maximum brightness
 - Front = Long notes
 - Back = Short notes
 
@@ -942,7 +941,7 @@ Penta(key) = environment {
 }; 
  
 //----------------------------------String-------------------------------
-// A karplus-strong string.
+// A Karplus-Strong string.
 //
 // USAGE: string(440Hz, 4s, 1.0, button("play"))
 // or	  button("play") : string(440Hz, 4s, 1.0)
@@ -988,7 +987,7 @@ process = FM(
 ```
 <!-- /faust-run -->
 
-### Example 2: frequency modulation with envelops
+### Example 2: frequency modulation with envelopes
 
 <!-- faust-run -->
 ```
@@ -1018,4 +1017,3 @@ upfront(x) = x>x';
 The documentation of Faust libraries is available here:
 
 - **[https://faustlibraries.grame.fr/](https://faustlibraries.grame.fr/)**
-
